feat: api - statistics/dashboard data
